--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.13.1
   intl: ^0.19.0
+  http: ^1.2.1
   
 flutter_icons:
   android: true
