--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_launcher_icons: ^0.13.1
-  intl: ^0.19.0
-  http: ^1.2.1
+  google_nav_bar: ^5.0.6
+
   
-flutter_icons:
-  android: true
-  image_path: "image/logo.png"
+  
 
 
 dev_dependencies:
